--- a/web-projects/test-site/styles/style.css
+++ b/web-projects/test-site/styles/style.css
@@ -26,7 +26,7 @@ html {
   body {
     width: 800px;
     margin: 0 auto;
-    background-color: #ff9500;
+    background-color: hsla(274, 100%, 50%, 0.447);
     padding: 0 20px 20px 20px;
     border: 5px solid black;
   }
